[package]
name = "adlt"
version = "0.61.3"
edition = "2021"
authors = ["Matthias Behr"]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/mbehr1/adlt/"
homepage = "https://github.com/mbehr1/adlt/"
readme= "README.md"
description = "Library and tools to handle automotive DLT- (diagnostic log and trace) files."
keywords = ["dlt", "automotive", "log", "trace", "analysis"]
categories = ["command-line-utilities", "development-tools", "encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
libarchive = ["dep:compress-tools", "compress-tools/static"]

[lib]
name = "adlt"
path = "src/lib.rs"
bench = false

[[bin]]
name = "adlt"
bench = false

[[bench]]
name = "dlt_benches"
harness = false

[[bench]]
name = "util_benches"
harness = false

[[bench]]
name = "filter_benches"
harness = false

[[bench]]
name = "muniic_benches"
harness = false

[[bench]]
name = "remote_benches"
harness = false

[dev-dependencies]
ntest = "0.9"
criterion = "0.5"

[dependencies]
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
clap = {version="4.5", features = ["cargo"]}
chrono = "0.4.39"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
evmap = "10.0.2"
nohash-hasher = "0.2.0"
tungstenite = "0.18.0"
assert_cmd = "2.0"
predicates = "3.1"
portpicker = "0.1.1"
cow-utils = "0.1.3"
encoding_rs = "0.8.35"
tempfile = "3.16.0"
itoa = "1.0"
lazy_static = "1.5.0"
regex = "1.11.1"
quick-xml = "0.37.2"
bincode = "2.0.1"
funty = "2.0.0"
ablf = "0.2.0"
afibex = "0.11.1"
asomeip = "0.9.2"
fancy-regex = "0.14.0"
glob = "0.3.2"
zip = "2.2.2"
compress-tools = { version= "0.15.1", optional = true }
cached = "0.54.0"
