[package]
name = "adlt"
version = "0.63.0"
edition = "2021"
authors = ["Matthias Behr"]
license = "CC-BY-NC-SA-4.0"
repository = "https://github.com/mbehr1/adlt/"
homepage = "https://github.com/mbehr1/adlt/"
readme = "README.md"
description = "Library and tools to handle automotive DLT- (diagnostic log and trace) files."
keywords = ["dlt", "automotive", "log", "trace", "analysis"]
categories = [
  "command-line-utilities",
  "development-tools",
  "encoding",
  "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
libarchive = ["dep:compress-tools", "compress-tools/static"]
pcap = ["dep:pcap", "dep:pnet"]
clippy = []

[lib]
name = "adlt"
path = "src/lib.rs"
bench = false

[[bin]]
name = "adlt"
bench = false

[[bench]]
name = "dlt_benches"
harness = false

[[bench]]
name = "util_benches"
harness = false

[[bench]]
name = "filter_benches"
harness = false

[[bench]]
name = "muniic_benches"
harness = false

[[bench]]
name = "remote_benches"
harness = false

[dev-dependencies]
ntest = "0.9"
criterion = "0.8"

[dependencies]
ctrlc = "3.5.1"
slog = "2.8.2"
slog-term = "2.9.2"
slog-async = "2.8.0"
socket2 = "0.6.2"
clap = { version = "4.5", features = ["cargo"] }
chrono = "0.4.43"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
size = "0.5.0"
evmap = "10.0.2"
nohash-hasher = "0.2.0"
tungstenite = "0.28.0"
assert_cmd = "2.1"
predicates = "3.1"
portpicker = "0.1.1"
cow-utils = "0.1.3"
encoding_rs = "0.8.35"
tempfile = "3.24.0"
itoa = "1.0"
lazy_static = "1.5.0"
regex = "1.12.2"
quick-xml = "0.37.5"                                     # todo update to 0.39.0
bincode = "2.0.1"                                        # todo update to bincode-next 2.0.4???
funty = "2.0.0"
ablf = "0.2.0"
afibex = "0.11.1"
asomeip = "0.9.3"
fancy-regex = "0.17.0"
glob = "0.3.3"
zip = "7.2"
compress-tools = { version = "0.15.1", optional = true }
cached = "0.56.0"
pcap = { version = "2.4.0", optional = true }
pnet = { version = "0.35.0", optional = true }
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
thread-priority = "3.0.0"
serial2 = "0.2.33"
